--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,7 @@
-baseURL = 'https://example.org/'
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
+baseURL = 'https://griffinsectio.github.io/'
 languageCode = 'en-us'
 title = "griffinsectio's notebook"
 theme = 'ananke'
