--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -10,7 +10,7 @@
 
 [[main]]
   name = "GitHub"
-  url = "https://github.com/jpanther/congo"
+  url = "https://github.com/griffinsectio"
   weight = 30
   [main.params]
     icon = "github"
